# arrow_crossword

./: .gitignore  README.md  create_dictionnary.py  enrich_arrow_crossword_definitions.py  generate_arrow_crossword.py  generate_graphic_crossword.py  main.py  manage.py  manage_fire.py  pyproject.toml  requirements.txt
back/: Makefile  manage_fire.py  pyproject.toml
back/arrow_crossword_generation/: create_dictionary.py  enrich_arrow_crossword_definition.py  enrich_mystery_capelito.py  generate_arrow_crossword.py
back/arrow_crossword_generation/utilities/: generation_utilities.py  post_generation_utilities.py
back/arrow_crossword_graphical_interface/: generate_graphic_crossword.py
back/arrow_crossword_graphical_interface/utilities/: constants.py  main_panel.py  menu_panel.py
back/resources/dictionaries/: full_dictionary.csv
back/resources/dictionaries/french_dictionary/: word_17.csv  word_3.csv  word_6.csv  word_7.csv
back/resources/dictionaries/full_dictionary/: word_11.csv  word_13.csv  word_14.csv  word_17.csv  word_18.csv  word_2.csv  word_22.csv  word_23.csv  word_3.csv  word_6.csv  word_8.csv
back/resources/dictionaries/small_dictionary/: word_4.csv  word_5.csv  word_9.csv
back/resources/dictionaries/usito_dictionary/: word_13.csv  word_3.csv  word_9.csv
back/resources/maps/: map_l2.csv
back/shared_utilities/: constants.py  utilities.py
back/shared_utilities/arrow_crossword/: arrow_crossword.py
back/shared_utilities/arrowed_place_holder/: arrowed_place_holder.py
back/shared_utilities/capelito/: capelito.py
back/shared_utilities/dictionary_handler/: constants.py  dictionary_handler.py  radix_tree.py
back/tests/: conftest.py  test_arrow_crossword.py  test_backtracking.py  test_generation_utilities.py
back/tests/data/map/: test_map.csv
(+218 files in other folders)
